created structure for project, added routes folder for express routes, client side files added to views folder, created storage folder for global storage

--- a/views/form.html
+++ b/views/form.html
@@ -17,6 +17,7 @@
             <label for="username">Username</label>
             <input
               type="text"
+              name="username"
               class="form-control"
               autocomplete="off"
               id="username"
@@ -27,6 +28,7 @@
             <label for="password">Password</label>
             <input
               type="password"
+              name="pass"
               class="form-control"
               autocomplete="off"
               id="password"
@@ -56,7 +58,7 @@
             </div>
           </div>
           <div class="form-group form-check">
-            <input type="checkbox" class="form-check-input" id="checkbox" />
+            <input type="checkbox" name="agree" class="form-check-input" id="checkbox" />
             <label class="form-check-label" for="checkbox">Agree with</label>
           </div>
           <button type="submit" class="btn btn-primary">Submit</button>
